Created attandance page

--- a/src/components/table/TimesheetTable.module.scss
+++ b/src/components/table/TimesheetTable.module.scss
@@ -1,14 +1,7 @@
-.commonTableContainer {
+.meetingScheduleContainer {
     margin-block: 1.25rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 0.5rem;
-
-    .tableHead {
-        display: flex;
-        justify-content: space-between;
-        padding-inline: 1%;
-    }
-
     .tableAction {
 
         svg {
@@ -19,15 +12,11 @@
         }
 
         svg:nth-child(1) {
-            background-color: #58024B;
-        }
-
-        svg:nth-child(2) {
             background-color: #3EC9D6;
             margin-inline: 0.5rem;
         }
 
-        svg:nth-child(3) {
+        svg:nth-child(2) {
             background-color: #FF3A6E;
 
         }
