--- a/src/components/attandanceModal/AttandanceModal.module.scss
+++ b/src/components/attandanceModal/AttandanceModal.module.scss
@@ -16,7 +16,12 @@
         margin-block-end: 1rem;
 
         >div {
+            width: 100%;
             margin: auto;
+        }
+
+        >div:nth-child(2) {
+            margin-inline-start: 0.5rem;
         }
     }
 
