--- a/src/components/CreateEmployee/CompanyDetail/CompanyDetail.module.scss
+++ b/src/components/CreateEmployee/CompanyDetail/CompanyDetail.module.scss
@@ -9,4 +9,27 @@
         padding-block-end: 4%;
         font-size: 1.25rem;
     }
+
+    .companyDetail {
+        margin-block: 0.5rem;
+
+        >div {
+            width: 100%;
+
+            >div {
+                margin: auto;
+            }
+
+            >div:nth-child(2) {
+                margin-inline-start: 0.5rem;
+            }
+        }
+    }
+
+    .companyDetail+div {
+
+        >div {
+            margin: auto;
+        }
+    }
 }
