--- a/src/components/CreateEmployee/PersonalDetail/PersonalDetail.module.scss
+++ b/src/components/CreateEmployee/PersonalDetail/PersonalDetail.module.scss
@@ -3,23 +3,21 @@
     border-radius: 0.5rem;
     padding-block-start: 5%;
     padding-block-end: 8%;
+    padding-inline: 8%;
 
-    h5 {
-        padding-inline-start: 8%;
-        font-size: 1.25rem;
-        // padding-block: 1rem;
-    }
+    .employeeCard {
 
-    >div {
-        margin: auto;
-        width: fit-content;
+        >div {
+            width: 100%;
+            margin-block: 0.5rem;
 
-        >div:nth-child(2) {
-            padding-inline-start: 1rem;
+            >div {
+                width: 100%;
+            }
+
+            >div:nth-child(2) {
+                margin-inline-start: 0.5rem;
+            }
         }
-    }
-
-    >div+div {
-        width: 80% !important;
     }
 }
