--- a/src/components/CreateEmployee/CompanyDetail/CompanyDetail.module.scss
+++ b/src/components/CreateEmployee/CompanyDetail/CompanyDetail.module.scss
@@ -11,7 +11,7 @@
     }
 
     .companyDetail {
-        margin-block: 0.5rem;
+        margin-block: 0.95rem;
 
         >div {
             width: 100%;
@@ -19,14 +19,16 @@
             >div {
                 margin: auto;
             }
+        }
 
-            >div:nth-child(2) {
-                margin-inline-start: 0.5rem;
-            }
+        >div:nth-child(2) {
+            margin-inline-start: 0.5rem !important;
         }
     }
 
     .companyDetail+div {
+        margin-block-end: 0.95rem;
+
 
         >div {
             margin: auto;
