--- a/src/components/common/CommonList/CommonList.module.scss
+++ b/src/components/common/CommonList/CommonList.module.scss
@@ -7,3 +7,11 @@
     width: 12%;
     padding-block: 0.75rem;
 }
+
+
+@media (max-width: 768px) {
+    .commonListContainer {
+       width: auto;
+       margin-left: -1rem;
+    }
+ }
