--- a/src/components/dashboard/Dashboard.module.scss
+++ b/src/components/dashboard/Dashboard.module.scss
@@ -4,6 +4,7 @@
     h2 {
         padding-block: 2rem;
     }
+   
 
     .dashboard2ndSection {
         > div:nth-child(1){
@@ -11,6 +12,23 @@
         }
         > div:nth-child(2){
             // background-color: yellow;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .dashboardContainer {
+       
+        h2+div{
+            // border: 2px solid yellow !important;
+            flex-direction: column;
+        }
+    
+        .dashboard2ndSection {
+            display: flex;
+            flex-direction: column;
+            
         }
     }
 }
