--- a/src/components/demo/Demo.module.scss
+++ b/src/components/demo/Demo.module.scss
@@ -77,3 +77,15 @@
         }
     }
 }
+
+
+/* Define styles for screens below 768px */
+// @media (max-width: 768px) {
+//     .demoContainer {
+//       display: none; /* Hide the container for small screens */
+//       border: 4px solid red;
+//     }
+  
+//     /* You can also adjust other styles for small screens as needed */
+//   }
+  
