--- a/src/components/heading/Heading.module.scss
+++ b/src/components/heading/Heading.module.scss
@@ -8,3 +8,15 @@
         display: flex;
     }
 }
+
+
+// @media (max-width: 768px) {
+
+//     .Heading > .headingContainer {
+//     display: flex;
+//       flex-direction: column;
+//       border: 4px solid darkblue;
+//     }
+      
+//     }
+    
