--- a/screen/src/components/sidebar/Sidebar.module.scss
+++ b/screen/src/components/sidebar/Sidebar.module.scss
@@ -1,66 +1,78 @@
 .sidebarContainer {
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    height: 100vh;
     position: fixed;
     width: 18%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 
-    h4 {
-        text-decoration: underline;
-        color: #062838;
-        padding-block: 1.5rem;
-    }
+    >div:nth-child(1) {
 
-    .menuItemContainer {
-
-        .activeStyle {
-            background-color: #6FD943;
-            margin-block: 0.25rem;
-            border-radius: 0.75rem;
-            color: #ffffff;
-            font-weight: 500;
-            margin-inline-start: 1rem;
-            margin-inline-end: 1.5rem;
-
-            svg {
-                background-color: #ffffff;
-                padding: 0.45rem;
-                border-radius: 0.5rem;
-                margin-inline-end: 0.75rem;
-                color: #6FD943;
-            }
-        }
-
-        .inActiveStyle {
-            margin-block: 0.25rem;
-            border-radius: 0.75rem;
-            color: #042736;
-            font-weight: 500;
-            margin-inline-start: 1rem;
-            margin-inline-end: 1.5rem;
-
-            svg {
-                background-color: #ffffff;
-                padding: 0.45rem;
-                border-radius: 0.5rem;
-                margin-inline-end: 0.75rem;
-                color: #042736;
-            }
+        img {
+            width: 100%;
+            height: 7rem;
+            margin-block: 1rem;
+            padding-inline: 2rem;
         }
     }
 
-    .menuItems {
+    .sidebarMenu {
+        margin-inline: 5%;
 
-        >li {
-            display: flex;
-            flex-direction: column;
+        ul {
+            padding-block: 2px;
+        }
 
-            >div:nth-child(1) {
-                width: 15rem;
+        .activeMenu {
+
+            li {
+                border-radius: 0.25rem;
+                background-color: #58024B;
+                color: #ffffff;
+                padding-block: 0.65rem;
+
+                svg {
+                    border-radius: 0.25rem;
+                    font-size: 2rem;
+                    padding: 0.30rem;
+                    color: #58024B;
+                    background-color: #ffffff;
+                    margin-inline-end: 0.75rem;
+                }
+            }
+        }
+
+        .inActiveMenu {
+
+
+            li {
+                border-radius: 0.25rem;
+                padding-block: 0.65rem;
+
+                &:hover {
+                    background-color: #58024B;
+                    color: #ffffff;
+                }
+
+                svg {
+                    border-radius: 0.25rem;
+                    font-size: 2rem;
+                    padding: 0.30rem;
+                    margin-inline-end: 0.75rem;
+                    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+                }
+            }
+        }
+
+        .subMenu {
+            width: 80%;
+            margin-left: auto !important;
+            color: #58024B;
+            &:hover{
+                font-weight: 600;
             }
 
-            >div:nth-child(2) {
-                width: 15rem;
-                background-color: #ffffff;
-                color: #042736;
+            svg {
+                font-size: 1.75rem;
+                margin-inline-end: 0.5rem;
             }
         }
     }
