--- a/screen/src/components/heading/Heading.module.scss
+++ b/screen/src/components/heading/Heading.module.scss
@@ -7,4 +7,12 @@
     >div {
         display: flex;
     }
+
+    >div:nth-child(2) {
+        >div:nth-child(1) {
+            >div:nth-child(1) {
+                margin-inline-end: 0.5rem;
+            }
+        }
+    }
 }
