updated hrms screen and functionality

--- a/screen/src/pages/EmpAttendancePage/Attendance/Attendance.module.scss
+++ b/screen/src/pages/EmpAttendancePage/Attendance/Attendance.module.scss
@@ -7,7 +7,15 @@
 
     .attendance {
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        height: 32rem;
         overflow: scroll;
+
+        table {
+            border: 1px solid yellow;
+
+            th {
+                border: 2px solid blue;
+            }
+            
+        }
     }
 }
