--- a/screen/src/components/modal/EmployeeModal/EmployeeModal.module.scss
+++ b/screen/src/components/modal/EmployeeModal/EmployeeModal.module.scss
@@ -2,19 +2,36 @@
     background-color: #ffffff;
     padding: 6%;
     border-radius: 0.25rem;
-    hr{
+
+    hr {
         margin-block-start: 1rem;
         margin-block-end: 2rem;
     }
+
     .employeeDetails {
-        // background-color: #ffffff;
-        // padding: 6%;
-        // border-radius: 0.25rem;
+
+        >div:nth-child(1) {
+            padding-inline-end: 0.25rem;
+
+            >div>div {
+                margin: auto;
+            }
+        }
+
+        >div:nth-child(2) {
+            padding-inline-start: 0.25rem;
+
+            >div>div {
+                margin: auto;
+            }
+        }
     }
-    .modalAction{
+
+    .modalAction {
         display: flex;
         justify-content: right;
-        >div:nth-child(1){
+
+        >div:nth-child(1) {
             margin-inline-end: 0.5rem;
         }
     }
