--- a/screen/src/components/common/ManageLeave/ManageLeaveTable.module.scss
+++ b/screen/src/components/common/ManageLeave/ManageLeaveTable.module.scss
@@ -8,7 +8,21 @@
         justify-content: space-between;
         padding-inline: 1%;
     }
+    table {
 
+        tr {
+
+            th {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
+
+            td {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
+        }
+    }
     .tableAction {
 
         svg {
