--- a/screen/src/components/tableData/attandanceTable/AttandanceTable.module.scss
+++ b/screen/src/components/tableData/attandanceTable/AttandanceTable.module.scss
@@ -3,6 +3,23 @@
         display: flex;
         justify-content: space-between;
     }
+
+    table {
+
+        tr {
+
+            th {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
+
+            td {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
+        }
+    }
+
     .tableAction {
 
         svg {
