--- a/screen/src/components/tableData/employeeTable/EmployeeTable.module.scss
+++ b/screen/src/components/tableData/employeeTable/EmployeeTable.module.scss
@@ -8,6 +8,22 @@
         justify-content: space-between;
     }
 
+    table {
+
+        tr {
+
+            th {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
+
+            td {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
+        }
+    }
+
     .tableAction {
 
         svg {
