--- a/screen/src/pages/EmpAttendancePage/Attendance/Attendance.module.scss
+++ b/screen/src/pages/EmpAttendancePage/Attendance/Attendance.module.scss
@@ -8,14 +8,21 @@
     .attendance {
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         overflow: scroll;
+    }
 
-        table {
-            border: 1px solid yellow;
+    table {
+
+        tr {
 
             th {
-                border: 2px solid blue;
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
             }
-            
+
+            td {
+                min-width: 1.5rem !important;
+                max-width: 2rem !important;
+            }
         }
     }
 }
