--- a/screen/src/components/dashboard/meetingSchedule/MeetingSchedule.module.scss
+++ b/screen/src/components/dashboard/meetingSchedule/MeetingSchedule.module.scss
@@ -2,4 +2,8 @@
     margin-block: 1.25rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 0.5rem;
+
+    >div:nth-child(1) {
+        padding-block-start: 2rem;
+    }
 }
