--- a/screen/src/components/Invoice/SelectBox/SelectBox.module.scss
+++ b/screen/src/components/Invoice/SelectBox/SelectBox.module.scss
@@ -2,6 +2,8 @@
     border: 1px solid #58024B;
     display: flex;
     width: fit-content;
+    height: fit-content;
     padding: 1%;
     border-radius: 0.25rem;
+    cursor: pointer;
 }
