--- a/screen/src/pages/Invoice/Invoice.module.scss
+++ b/screen/src/pages/Invoice/Invoice.module.scss
@@ -71,6 +71,7 @@
     }
 
     .addtionalButton {
+        margin-block: 2rem;
 
         >div:nth-child(1) {
             display: flex;
@@ -82,6 +83,7 @@
                 padding: 1%;
                 border: 1px dashed #58024B;
                 border-radius: 0.25rem;
+                cursor: pointer;
             }
         }
 
