--- a/screens/src/components/userDashboard/Userdashboard.css
+++ b/screens/src/components/userDashboard/Userdashboard.css
@@ -17,11 +17,16 @@
 
 .commonCard .icon {
     font-size: 2rem;
+    margin-right: 1rem;
+
 }
 
 .commonCard .content h3 {
     margin: 0;
     font-size: 1.1rem;
+    font-weight: bold;
+    display:flex;
+    justify-content: center;
 }
 
 .commonCard .content p {
