--- a/screens/src/components/login/Login.css
+++ b/screens/src/components/login/Login.css
@@ -1,16 +1,18 @@
 .loginContainer {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   background-image: linear-gradient(to right, #ffffff 70%, #A6145E 30%);
-  height: 100vh;
 }
 
 .loginContainer > div:nth-child(1) {
-  width: 20rem;
+  width: 18rem;
   height: 10rem;
 }
 
 .loginContainer > div:nth-child(1) img {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: auto;
   margin-block-start: 10%;
   margin-inline-start: 20%;
 }
@@ -24,6 +26,7 @@
   height: 15%;
   margin-block-start: 6%;
   border-radius: 0.5rem;
+  
 }
 
 .loginContainer > div:nth-child(2) > div:nth-child(1) img {
@@ -37,9 +40,10 @@
   height: 450px;
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
   padding: 40px;
   margin-block-start: -2.5rem;
+  box-sizing: border-box;
 }
 
 .inputFieldContainer > div {
@@ -52,6 +56,7 @@
   width: 100%;
   padding: 10px;
   margin-top: 20px;
+  transition: all 0.3s ease-in-out;
 }
 
 .commonButtonContainer button:hover {
@@ -59,3 +64,79 @@
   background-color: #58024B;
   color: #ffffff;
 }
+
+
+
+/* For tablets and smaller devices */
+@media (max-width: 1100px) {
+  .loginContainer {
+    background-image: linear-gradient(to bottom, #ffffff 60%, #A6145E 40%);
+  }
+
+  .loginContainer > div:nth-child(1) {
+  width: 16rem;
+  height: auto;
+  margin: 2rem auto 1rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+  .loginContainer > div:nth-child(2) {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem 5%;
+    flex-grow: 1;
+    flex-direction: column;
+    align-items: center;
+    /* padding: 1rem; */
+  }
+
+  .loginContainer > div:nth-child(2) > div:nth-child(1) {
+    width: 100%;
+    max-width: 500px;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    margin-bottom: 5rem;
+  }
+
+  .loginFormContainer {
+    
+    padding: 24px;
+    width: 100%;
+    max-width: 500px;
+    max-height: 400px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+  }
+}
+
+/* For very small screens (phones) */
+@media (max-width: 480px) {
+  .loginContainer > div:nth-child(1) {
+    width: 10rem;
+  }
+
+  .loginFormContainer {
+    padding: 20px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+  }
+
+  .loginFormContainer h4 {
+    font-size: 22px !important;
+  }
+}
+
+@media (min-width: 2560px) {
+  .loginFormContainer {
+    width: 520px;       
+    min-height: 550px;  
+    padding: 56px;      
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.18);
+  }
+
+  .loginContainer > div:nth-child(2) {
+    padding-inline: 15%;
+  }
+}
+
+
